syntax = "proto3";

package internal_message.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 站内信消息分类服务
service InternalMessageCategoryService {
  // 查询站内信消息分类列表
  rpc List (pagination.PagingRequest) returns (ListInternalMessageCategoryResponse) {}

  // 统计站内信消息分类数量
  rpc Count (pagination.PagingRequest) returns (CountInternalMessageCategoryResponse) {}

  // 查询站内信消息分类详情
  rpc Get (GetInternalMessageCategoryRequest) returns (InternalMessageCategory) {}

  // 创建站内信消息分类
  rpc Create (CreateInternalMessageCategoryRequest) returns (google.protobuf.Empty) {}

  // 更新站内信消息分类
  rpc Update (UpdateInternalMessageCategoryRequest) returns (google.protobuf.Empty) {}

  // 删除站内信消息分类
  rpc Delete (DeleteInternalMessageCategoryRequest) returns (google.protobuf.Empty) {}
}

// 站内信消息分类
message InternalMessageCategory {
  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "分类ID" }
  ]; // 分类ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = { description: "名称" }
  ]; // 名称

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = { description: "编码" }
  ]; // 编码

  optional string icon_url = 4 [
    json_name = "iconUrl",
    (gnostic.openapi.v3.property) = { description: "图标URL" }
  ]; // 图标URL

  optional uint32 sort_order = 5 [
    json_name = "sortOrder",
    (gnostic.openapi.v3.property) = {description: "排序顺序，值越小越靠前"}
  ];  // 排序顺序，值越小越靠前

  optional bool is_enabled = 6 [
    json_name = "isEnabled",
    (gnostic.openapi.v3.property) = {description: "是否启用"}
  ];  // 是否启用

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "租户名称"}
  ];  // 租户名称

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 查询站内信消息分类列表 - 回应
message ListInternalMessageCategoryResponse {
  repeated InternalMessageCategory items = 1;
  uint64 total = 2;
}

// 查询站内信消息分类详情 - 请求
message GetInternalMessageCategoryRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建站内信消息分类 - 请求
message CreateInternalMessageCategoryRequest {
  InternalMessageCategory data = 1;
}

// 更新站内信消息分类 - 请求
message UpdateInternalMessageCategoryRequest {
  uint32 id = 1;

  InternalMessageCategory data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除站内信消息分类 - 请求
message DeleteInternalMessageCategoryRequest {
  uint32 id = 1;
}

message CountInternalMessageCategoryResponse {
  uint64 count = 1;
}
